[package]
name = "avromatic"
version = "0.1.0"
authors = ["Kyle Phelps <kphelps@salsify.com>"]
edition = "2018"

[dependencies]
avro-rs = { git = "https://github.com/kphelps/avro-rs", branch = "master" }
# avro-rs = { path = "../../dev/avro-rs" }
byteorder = "*"
failure = "*"
lazy_static = "*"
rutie = { path = "../../dev/rutie" }
# rutie = { git = "https://github.com/danielpclark/rutie", branch = "master" }
serde_json = "*"
sha2 = "*"

[lib]
name = "avromatic"
crate-type = ["dylib"]

[profile.release]
debug = true