[package]
name = "avromatic"
version = "0.1.0"
authors = ["Kyle Phelps <kphelps@salsify.com>"]
edition = "2018"

[dependencies]
 avro-rs = { git = "https://github.com/kphelps/avro-rs", branch = "master" }
# avro-rs = { path = "../../dev/avro-rs" }
#avro-rs = "0.11.0"
byteorder = "*"
failure = "*"
lazy_static = "*"
# TODO: Switch once PR lands: https://github.com/danielpclark/rutie/pull/135
# rutie = "0.7.0"
rutie = { git = "https://github.com/askreet/rutie", branch = "call_super" }
serde_json = "*"
sha2 = "*"

[lib]
name = "avromatic"
crate-type = ["dylib"]

[profile.release]
debug = true
